--- a/files/openwrt/etc/nodogsplash/htdocs/splash.html
+++ b/files/openwrt/etc/nodogsplash/htdocs/splash.html
@@ -12,7 +12,7 @@
 </tr>
 <tr>
   <td align=center height="120">
-  <h2>For Internet access - click the sign</h2> <h2>Pro pristup na Internet klikni na znak.</h2>
+  <h2>For Internet access - click the sign.</h2> <h2>Pro pristup na Internet klikni na znak.</h2>
 
     <!--
          A client is authenticated by requesting the page $authtarget.
